<resources>
    <string name="app_name">Harry Potter and Android development</string>
    <string name="btn_text">Random character</string>
    <string name="title_character">character</string>
    <string name="title_character_list">list of characters</string>
    <string name="checkbox_text">Only Slytherin</string>
    <!-- Auth-->
    <string name="sign_up">Sign Up</string>
    <string name="sign_in">Sign In</string>
    <string name="sign_out">Sign Out</string>
    <string name="auth_caterogy">Account</string>
    <string name="tv_forget_pasword_text"><u>Have you forgotten your password?</u></string>
    <string name="tv_sign_up">Please, sign up!</string>
    <string name="tv_sign_in">Please, sign in!</string>
    <string name="ed_email_hint">Email</string>
    <string name="ed_password_hint">Password</string>
    <string name="btn_sign_up">Sign Up</string>
    <string name="msg_verification_success">Verification was successful! Check your email!</string>
    <string name="msg_sign_in">You have successfully signed in to your account</string>
    <string name="msg_sign_out">Your are signed out of your account</string>
    <string name="msg_reset_password">Password reset</string>
    <string name="msg_link_account">Email successfully linked to Google account</string>
    <string name="title_forum">Forum</string>
    <string name="title_room">Room</string>
    <string name="title_workmanager">WorkManager</string>
    <string name="default_notification_channel_id" translatable="false">fcm_default_channel</string>
    <string name="title_paging">Paging</string>

</resources>